# darabonba-cpp-generator

./: .appveyor.yml  .eslintrc  .gitignore  CHANGELOG.md  README-zh-CN.md  README.md  package-lock.json  package.json
examples/: complex.js
lib/: builtin.js  emitter.js  generator.js  helper.js
src/: generator.js
src/langs/common/: combinator.js  config.js  items.js
src/langs/cpp/: combinator.js  config.js  helper.js  modules.js  package_info.js
src/lib/: emitter.js  helper.js
src/resolver/: base.js  client.js  model.js
template/: CMakeLists.exec.txt  CMakeLists.external.txt  CMakeLists.modern.txt  CMakeLists.shared.txt  ConfigVersion.cmake
tests/: cpp.tests.js  generate-fixtures.js  lib.tests.js  main.test.js  resolver.tests.js
tests/expected/exec/: CMakeLists.txt
tests/expected/exec/cmake/: darabonba_execConfig.cmake.in
tests/expected/exec/src/: exec.cpp
tests/expected/package/: CMakeLists.txt
tests/fixtures/alias/: CMakeLists.txt  Darafile
tests/fixtures/annotation/: CMakeLists.txt  Darafile
tests/fixtures/api/: CMakeLists.txt  Darafile  main.dara
tests/fixtures/builtin/: CMakeLists.txt  Darafile
tests/fixtures/comment/: CMakeLists.txt  Darafile
tests/fixtures/complex/: CMakeLists.txt  Darafile  main.dara
tests/fixtures/const/: CMakeLists.txt  Darafile
tests/fixtures/empty/: Darafile  main.dara
tests/fixtures/exec/: main.dara
tests/fixtures/function/: Darafile  main.dara
tests/fixtures/import/: .libraries.json  CMakeLists.txt  Darafile  main.dara
tests/fixtures/map/: Darafile
tests/fixtures/model/: Darafile  main.dara
(+202 files in other folders)
